# cpp-mariadb-example

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
init/mariadb/: init-sql.sql
